# pgit

./: Cargo.toml  LICENSE  README.md
docs/adr/: 0001-registry-branching-strategy.md  0002-distribution-archive-lock.md  0003-command-set.md  0004-binary-storage-lfs-vs-alternatives.md  README.md
pgit/: Cargo.toml
pgit-core/: Cargo.toml
pgit-core/src/: error.rs  hash.rs  lib.rs  manifest.rs  purl.rs  version.rs
pgit-native/: Cargo.toml
pgit-native/src/: fetch.rs  fs.rs  http.rs  lib.rs  publish.rs
pgit-wasm/: Cargo.toml
pgit-wasm/src/: bindings.rs  lib.rs
pgit/src/: main.rs
