[workspace]
members = [
    "pgit-core",
    "pgit-native",
    "pgit-wasm",
    "pgit",
]
resolver = "2"

[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT"
repository   = "https://github.com/driftsys/pgit"
authors      = ["driftsys"]

[workspace.dependencies]
# internal
pgit-core   = { path = "pgit-core",   version = "0.1.0" }
pgit-native = { path = "pgit-native", version = "0.1.0" }

# serialisation
serde      = { version = "1",    features = ["derive"] }
serde_json = { version = "1" }
toml       = { version = "0.8" }

# versioning & identity
semver = { version = "1" }
url    = { version = "2" }

# errors
thiserror = { version = "2" }
anyhow    = { version = "1" }

# hashing
sha2 = { version = "0.10" }
hex  = { version = "0.4" }

# CLI
clap = { version = "4", features = ["derive"] }

# I/O (native only)
ureq = { version = "3" }

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
