[package]
name        = "pgit-native"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
description = "pgit native I/O — git clone/push, HTTP release assets, filesystem operations"

[dependencies]
pgit-core  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
ureq       = { workspace = true }
sha2       = { workspace = true }
hex        = { workspace = true }
