[package]
name        = "pgit-wasm"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
description = "pgit WASM build — wasm-bindgen exports and host I/O bridge"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pgit-core          = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
wasm-bindgen       = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys             = { workspace = true }
serde-wasm-bindgen = { workspace = true }
