[package]
name        = "pgit-wasm"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "pgit WASM build — wasm-bindgen exports and host I/O bridge"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pgit-core  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }

# WASM-only — not required when compiling for native targets
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen         = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
js-sys               = { version = "0.3" }
serde-wasm-bindgen   = { version = "0.6" }
